# djcrudx

./: .gitignore  COMPLETE_GUIDE.md  LICENSE  MANIFEST.in  POLISH_SETUP.md  PUBLISH.md  README.md  UNIVERSAL_TRANSLATIONS.md  build.sh  pypirc_example  pyproject.toml
docs/: CRUD_DOCUMENTATION.md  INSTALLATION.md
examples/: BASIC_EXAMPLE.py  DELETE_EXAMPLE.py  EXAMPLE.md  FILTERS_EXAMPLE.py  FORMS_EXAMPLE.py  INLINE_FORMSETS_EXAMPLE.py  MODELS_EXAMPLE.py  ORGANIZATION_EXAMPLE.py  WIDGETS_EXAMPLE.py
src/djcrudx/: __init__.py  apps.py  crud.py  inline_mixins.py  inline_widgets.py  mixins.py  translations.py  widgets.py
src/djcrudx/locale/: README.md
src/djcrudx/management/commands/: setup_polish.py
src/djcrudx/templates/crud/: base.html  delete_confirm.html  detail_view.html  form_field.html  form_view.html  form_with_inlines.html  list_view.html
src/djcrudx/templates/crud/_partials/: datatable.html  pagination.html  tooltip.html
src/djcrudx/templatetags/: __init__.py  crud_filters.py  djcrudx_tags.py
